[package]
name = "polkadot-runtime-parachains"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", features = [ "derive" ], optional = true }
derive_more = "0.99.14"
bitflags = "1"

sp-api = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
inherents = { package = "sp-inherents", git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-std = { package = "sp-std", git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-session = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-staking = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-keystore = { git = "https://github.com/purestake/substrate", optional = true , branch = "crystalin-v0.9.9-block-response-length" }

pallet-authority-discovery = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
pallet-authorship = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
pallet-balances = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
pallet-session = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
pallet-staking = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
frame-system = {git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
pallet-timestamp = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
pallet-vesting = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
pallet-offences = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
frame-benchmarking = { git = "https://github.com/purestake/substrate", default-features = false, optional = true , branch = "crystalin-v0.9.9-block-response-length" }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

rand = { version = "0.8.3", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[dev-dependencies]
futures = "0.3.15"
hex-literal = "0.3.1"
keyring = { package = "sp-keyring", git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-trie = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
pallet-babe = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-application-crypto = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
pallet-staking-reward-curve = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
pallet-treasury = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
frame-support-test = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
serde_json = "1.0.61"
sp-version = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sc-keystore = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }


[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"rustc-hex/std",
	"serde",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
]
