[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "pallet-xcm"
version = "0.9.9-1"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
xcm-builder = { path = "../xcm-builder" }
polkadot-parachain = { path = "../../parachain" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
]
runtime-benchmarks = []
