[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "pallet-xcm"
version = "0.9.19"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
log = { version = "0.4.16", default-features = false }

sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.19-gorka-xcm-v3" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
polkadot-parachain = { path = "../../parachain" }
xcm-builder = { path = "../xcm-builder" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = []
