[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "xcm-executor"
description = "An abstract and configurable XCM message executor."
version = "0.9.12"

[dependencies]
impl-trait-for-tuples = "0.2.0"
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
sp-std = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-arithmetic = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
log = { version = "0.4.14", default-features = false }
frame-benchmarking = { git = "https://github.com/purestake/substrate", default-features = false, optional = true , branch = "elois-jsonrpsee" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
]
std = [
	"parity-scale-codec/std",
	"xcm/std",
	"sp-std/std",
	"sp-io/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"log/std",
]
