[package]
name = "bp-runtime"
description = "Primitives that may be used at (bridges) runtime level."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
num-traits = { version = "0.2", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-state-machine = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-std = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-trie = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }

[dev-dependencies]
sp-core = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"hash-db/std",
	"num-traits/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-state-machine/std",
	"sp-trie/std",
]
