[package]
name = "polkadot-gossip-support"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sp-application-crypto = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

polkadot-node-network-protocol = { path = "../protocol" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-primitives = { path = "../../../primitives" }

futures = "0.3.15"
rand = { version = "0.8.3", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
tracing = "0.1.26"

[dev-dependencies]
sp-core = { git = "https://github.com/purestake/substrate", features = ["std"] , branch = "crystalin-v0.9.9-block-response-length" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }

assert_matches = "1.4.0"
