[package]
name = "polkadot-statement-distribution"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Statement Distribution Subsystem"
edition = "2018"

[dependencies]
futures = "0.3.17"
tracing = "0.1.29"
polkadot-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-sig-para" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.7.0"
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
derive_more = "0.99.11"
thiserror = "1.0.30"

[dev-dependencies]
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-application-crypto = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-tracing = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-keystore = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-network = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
futures-timer = "3.0.2"
