[package]
name = "polkadot-test-client"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-service = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-block-builder = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-state-machine = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
futures = "0.3.17"
