[package]
name = "polkadot-test-client"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-service = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-block-builder = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-state-machine = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
futures = "0.3.17"
