[package]
name = "polkadot-test-service"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.15"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.2"
tracing = "0.1.26"
rand = "0.8.3"
tempfile = "3.2.0"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-authority-discovery = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
babe = { package = "sc-consensus-babe", git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
consensus_common = { package = "sp-consensus", git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
frame-system = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
inherents = { package = "sp-inherents", git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
pallet-staking = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-chain-spec = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-cli = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-network = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-tracing = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
service = { package = "sc-service", git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-arithmetic = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-state-machine = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
substrate-test-client = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/purestake/substrate", default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
serde_json = "1.0.61"
substrate-test-utils = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
tokio = { version = "0.2", features = ["macros"] }
