[package]
name = "polkadot-test-service"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.3"
tracing = "0.1.29"
rand = "0.8.3"
tempfile = "3.2.0"
tokio = "1.12.0"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-authority-discovery = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
babe = { package = "sc-consensus-babe", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
consensus_common = { package = "sp-consensus", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
frame-system = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
inherents = { package = "sp-inherents", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
pallet-staking = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-chain-spec = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-cli = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-network = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-tracing = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
service = { package = "sc-service", git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-arithmetic = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-state-machine = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
substrate-test-client = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
serde_json = "1.0.67"
substrate-test-utils = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
tokio = { version = "1.12", features = ["macros"] }
