[package]
name = "test-parachain-halt"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test parachain which executes forever"
edition = "2018"
build = "build.rs"

[dependencies]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

[features]
default = [ "std" ]
std = []
