[package]
name = "remote-ext-tests-bags-list"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-runtime = { version = "0.9.8", path = "../../../runtime/polkadot" }
kusama-runtime = { version = "0.9.8", path = "../../../runtime/kusama" }

pallet-staking = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
pallet-election-provider-multi-phase = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
pallet-bags-list = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
frame-election-provider-support = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-storage = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-tracing = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-std = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
frame-support = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
remote-externalities = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
tokio = { version = "1", features = ["macros"] }
log = { version = "0.4.14" }
structopt = {version = "0.3.23" }
