[package]
name = "xcm-executor-integration-tests"
description = "Integration tests for the XCM Executor"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
frame-support = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.43" }
frame-system = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
futures = "0.3.21"
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-test-client = { path = "../../../node/test/client" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../../../node/test/service" }
sp-consensus = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-keyring = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.43" }
sp-state-machine = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
xcm = { path = "../..", default-features = false }
xcm-executor = { path = ".." }
sp-tracing = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }

[features]
default = ["std"]
std = [
	"xcm/std",
	"sp-runtime/std",
	"frame-support/std",
]
