[package]
name = "xcm-simulator-example"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Examples of xcm-simulator usage."
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
paste = "1.0.5"

frame-system = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
frame-support = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-std = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

xcm = { path = "../../" }
xcm-simulator = { path = "../" }
xcm-executor = { path = "../../xcm-executor" }
xcm-builder = { path = "../../xcm-builder" }
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-core-primitives = { path = "../../../core-primitives"}
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }
polkadot-parachain = { path = "../../../parachain" }
